Bug 1269990 -Refuse to interpolate when animating between clip-path shape values that have different reference boxes. r=dholbert

MozReview-Commit-ID: JzWestyfGoT

--HG--
extra : rebase_source : 5507c15e8ea2488362f571fc63303d3003233a05